fix for JDK 11